add templates and zoolist

--- a/pythonzoo/zoo/templates/base-generic.html
+++ b/pythonzoo/zoo/templates/base-generic.html
@@ -19,7 +19,10 @@
 	
 	{% load static %}
 	<div class='style'>
-		{% block content %}{% endblock %}
+		{% block content %}
+			<h1>This is the Navigation Bar</h1>
+			<p>Contact Us</p>
+		{% endblock %}
 	</div>
 
 </body>
