--- a/pythonzoo/zoo/templates/zoo/exhibit_detail.html
+++ b/pythonzoo/zoo/templates/zoo/exhibit_detail.html
@@ -5,7 +5,9 @@
 <h1>Exhibit Detail for {{ exhibit.id }} - {{ exhibit.name }} in {{ exhibit.zoo.name }}</h1>
 
 <h1>Neighbors</h1>
-
+{% for neighbor in exhibit.fromExhibit.all %}
+  <p>{{ neighbor.direction }} to: {{ neighbor.toExhibit.name }}</p>
+{% endfor %}
 
 <h1>Animals</h1>
 
