--- a/pythonzoo/zoo/templates/base-generic.html
+++ b/pythonzoo/zoo/templates/base-generic.html
@@ -17,13 +17,13 @@
 
 <body>
 	
-	{% load static %}
 	<div class='style'>
-		{% block content %}
-			<h1>This is the Navigation Bar</h1>
-			<p>Contact Us</p>
-		{% endblock %}
+		<h1>This is the Navigation Bar</h1>
+		<p>Contact Us</p>
 	</div>
+	<hr>
+	
+		{% block content %}{% endblock %}
 
 </body>
 
