--- a/pythonzoo/zoo/static/css/styles.css
+++ b/pythonzoo/zoo/static/css/styles.css
@@ -1,4 +1,10 @@
 .style {
 	color: rgb(57,15,242);
 	text-align: center;
+	font-weight: bolder;
+	font-size: 1.3em;
+}
+
+.staticBar {
+	text-align: left;
 }
