--- a/pythonzoo/zoo/templates/base-generic.html
+++ b/pythonzoo/zoo/templates/base-generic.html
@@ -17,9 +17,12 @@
 
 <body>
 	
-	<div class='style'>
-		<h1>This is the Navigation Bar</h1>
-		<p>Contact Us</p>
+	<div class='staticBar'>
+	<ul style='list-style-type:none'>
+		<li><a href="{% url 'zooList' %}">Home</a></li>
+		<li><a href="{% url 'aboutUs' %}">About Us</a></li>
+		<li><a href="{% url 'contactUs' %}">Contact Us</a></li>
+	</ul>
 	</div>
 	<hr>
 	
