--- a/pythonzoo/zoo/templates/zoo/zoo_detail.html
+++ b/pythonzoo/zoo/templates/zoo/zoo_detail.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
-<h1>Zoo Detail for {{ zoo.id }} - {{ zoo.name }}</h1>
+<h1>Details for {{ zoo.name }} ({{ zoo.id }})</h1>
+<h2>Exhibits:</h2>
+
+{% for exhibit in zoo.exhibit_set.all %}
+<ul>
+	<li><a href="{{ exhibit.get_absolute_url }}">{{ exhibit.name }}</a></li>
+</ul>
+{% endfor %}
 
 {% endblock %}
