--- a/pythonzoo/zoo/templates/zoo/aboutUs.html
+++ b/pythonzoo/zoo/templates/zoo/aboutUs.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
-<h1>About Us</h1>
+<div class='style'>
+	<h1>About Us</h1>
+	<p>The Python Zoo is the final project for ITSE-1302 at San Antonio College (Central Texas Technology Center) campus. This project was developed using the Django framework. It is a great assignment and I am happy I got to work on it.</p> 
+	<p>I've added two Lorem paragraphs to make the page look longer.</p>
+	
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed dolor in lorem eleifend viverra. Sed nec bibendum massa. Proin felis erat, ultricies quis ante et, posuere egestas sem. Curabitur quis volutpat elit. Cras a dignissim magna, in aliquet arcu. Quisque aliquam est porta arcu maximus varius. Vestibulum mollis metus id bibendum condimentum. Aliquam condimentum, ligula at scelerisque convallis, eros sapien tristique mi, sed auctor leo ante vitae enim. Pellentesque risus lectus, pretium hendrerit rutrum eget, euismod non mauris. Nullam euismod metus vel bibendum mattis. Quisque sit amet nibh posuere, sagittis eros vitae, iaculis nulla. Integer non tellus quis lacus mollis ultrices vel sit amet augue. Donec quis tellus eu dui congue mollis. Nam id nunc posuere, egestas ligula accumsan, laoreet neque. Donec finibus consectetur turpis quis posuere.</p>
+	<p>Nulla vitae suscipit ex. Mauris lorem est, fermentum vel augue eu, laoreet bibendum nulla. Aenean feugiat quam eu enim aliquam, a congue ligula congue. Aenean mattis tincidunt elit, sit amet aliquam diam varius sit amet. Duis eleifend bibendum augue, id egestas nisl elementum ac. Pellentesque eget felis ac lacus eleifend mollis. Nunc nec dui volutpat, lobortis nunc eget, vestibulum urna. Etiam rhoncus, odio accumsan sollicitudin scelerisque, dolor risus feugiat enim, molestie suscipit sem magna quis nibh. Sed eu neque at justo luctus consequat ac sed tellus. Nulla lectus turpis, accumsan sed dapibus in, facilisis nec quam.</p>
+</div>
 
 {% endblock %}
