--- a/pythonzoo/zoo/templates/zoo/animal_detail.html
+++ b/pythonzoo/zoo/templates/zoo/animal_detail.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-<div class='info'>
+<div class='style'>
 	<h1>Animal Detail for {{ animal.name }} ({{ animal.id }}) in {{ animal.exhibit.zoo.name }}</h1>
 
 {% load static %}
 
-	<img src="{% static animal.imageFileName %}">
+	<img src="{% static animal.imageFileName %}" style='height:200px'>
 
 	<h3>Habitat:</h3>
 	<p>{{ animal.habitatDescription }}</p>
@@ -17,6 +17,9 @@
 
 	<h3>Behavior:</h3>
 	<p>{{ animal.behaviorDescription }}</p>
+	
+	<h3>Living Period:</h3>
+	<p>{{ animal.livingPeriod }}</p>
 
 {% endblock %}
 </div>
