--- a/pythonzoo/zoo/templates/zoo/contactUs.html
+++ b/pythonzoo/zoo/templates/zoo/contactUs.html
@@ -2,6 +2,23 @@
 
 {% block content %}
 
-<h1>Contact Us</h1>
+<div class='style'>
+	<h1>Contact The Zoo</h1>
+	<label>From E-mail:
+		<input type='textbox' placeholder='example@gmail.com'</label>
+		<br>
+		<br>
+		<label>Subject:
+		<input type='textbox' placeholder='Request Information'</label>
+		<br>
+		<br>
+		<label>Message:
+		<textarea cols="30" row="60"></textarea></label>
+		<br>
+		<br>
+		<input type="submit" value="Send">
+</div>
+
+
 
 {% endblock %}
