--- a/pythonzoo/zoo/static/css/styles.css
+++ b/pythonzoo/zoo/static/css/styles.css
@@ -1,10 +1,23 @@
 .style {
-	color: rgb(57,15,242);
+	color: black;
 	text-align: center;
-	font-weight: bolder;
 	font-size: 1.3em;
+	padding: 10px;
 }
 
 .staticBar {
-	text-align: left;
+	display: flex;
+}
+
+.inline {
+	padding: 10px;
+}
+
+h1 {
+	font-weight: bolder;
+	font-size: 1.5em;
+}
+
+h3 {
+	font-weight: bolder;
 }
