--- a/pythonzoo/zoo/templates/zoo/zoo_detail.html
+++ b/pythonzoo/zoo/templates/zoo/zoo_detail.html
@@ -1,14 +1,18 @@
 {% extends "base-generic.html" %}
 
 {% block content %}
+{% load static %}
 
-<h1>Details for {{ zoo.name }} ({{ zoo.id }})</h1>
-<h2>Exhibits:</h2>
+<div class='style'>
+	<img src="{% static zoo.logoFileName %}" style='height:200px'>
+	<h1>Details for {{ zoo.name }} ({{ zoo.id }})</h1>
+	<h2>Exhibits:</h2>
 
 {% for exhibit in zoo.exhibit_set.all %}
-<ul>
-	<li><a href="{{ exhibit.get_absolute_url }}">{{ exhibit.name }}</a></li>
-</ul>
+	<ul style='list-style-type:none'>
+		<li><a href="{{ exhibit.get_absolute_url }}">{{ exhibit.name }}</a></li>
+	</ul>
 {% endfor %}
+</div>
 
 {% endblock %}
