--- a/pythonzoo/zoo/templates/zoo/zoo_list.html
+++ b/pythonzoo/zoo/templates/zoo/zoo_list.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 
-<h1>Zoo List</h1>
+<div class='style'>
+	<h1>Pick a Zoo</h1>
 
 {% for zoo in zoo_list %}
-<li>
-	<a href="{{ zoo.get_absolute_url }}">{{ zoo.name }}</a>
-</li>
+
+{% load static %}
+<ul style='list-style-type:none'>
+	<li>
+		<img src="{% static zoo.logoFileName %}" style='height:200px; width:200px'>  <a href="{{ zoo.get_absolute_url }}">{{ zoo.name }}</a>
+	</li>
+</ul>
 {% endfor %}
-
-
-
-
+</div>
 
 {% endblock %}
