--- a/pythonzoo/zoo/templates/zoo/contactUs.html
+++ b/pythonzoo/zoo/templates/zoo/contactUs.html
@@ -16,7 +16,7 @@
 		<textarea cols="30" row="60"></textarea></label>
 		<br>
 		<br>
-		<input type="submit" value="Send">
+		<input class='btn' type="submit" value="Send">
 </div>
 
 
