--- a/pythonzoo/zoo/static/css/styles.css
+++ b/pythonzoo/zoo/static/css/styles.css
@@ -22,16 +22,24 @@ p {
 	padding: 10px;
 }
 
+.btn {
+	border-radius: 20px;
+	border: 3px solid rgb(42,2,137);
+	background-color: rgb(42,2,137);
+	font-weight: bolder;
+	font-size: 1.3em;
+}
+
 h1 {
 	font-weight: bolder;
 	font-size: 1.7em;
-	color: rgb(2,137,42);
+	color: rgb(229,197,0);
 }
 
 h3, h2 {
 	font-weight: bolder;
 	font-size: 1.5em;
-	color: rgb(42,2,137);
+	color: rgb(84,52,160);
 }
 
 img {
@@ -45,4 +53,17 @@ a {
 
 a:hover {
 	color: rgb(187,4,18);
+}
+
+li {
+	color: rgb(84,52,160);
+}
+
+label {
+	padding: 20px;
+	color: rgb(6,212,10);
+}
+
+input, textarea {
+	border: 2px solid black;
 }
